--- a/config_example.json
+++ b/config_example.json
@@ -2,6 +2,7 @@
   "days_until_due": 1,
   "refresh_every_seconds": 10.0,
   "dues_cents": 2000,
+  "guild_id": "215845807801237514",
   "stripe_api_key": "******************",
   "discord_api_key": "******************"
 }
