--- a/config_example.json
+++ b/config_example.json
@@ -2,7 +2,8 @@
   "days_until_due": 1,
   "refresh_every_seconds": 10.0,
   "dues_cents": 2000,
-  "guild_id": "215845807801237514",
+  "guild_id": 215845807801237514,
+  "paid_member_role_id": 866872851306512405,
   "stripe_api_key": "******************",
   "discord_api_key": "******************"
 }
